[gd_scene load_steps=9 format=2]

[ext_resource path="res://ExternalResource/asdfj-export.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Enemy2/Enemy2.gd" type="Script" id=2]
[ext_resource path="res://Atta_Detect/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy/Enemystats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemy/EnemyHealthBar.tscn" type="PackedScene" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 18.3097
height = 55.7826

[sub_resource type="CapsuleShape2D" id=3]
radius = 18.071
height = 57.2273

[node name="Enemy2" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 0, 0.866667, 1 )
scale = Vector2( 0.5, 0.5 )
z_index = 1
frames = SubResource( 1 )
animation = "stand"

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8
collision_mask = 0
is_enemy = true

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 7.611, -15.9971 )
shape = SubResource( 2 )

[node name="Enemystats" parent="." instance=ExtResource( 4 )]
health = 3.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 5.98679, 0.237548 )
scale = Vector2( 3.72304, 5.79152 )

[node name="Spawn" type="Timer" parent="."]
wait_time = 1.5

[node name="SpawnPos" type="Position2D" parent="."]
position = Vector2( 7.71693, -36.7038 )

[node name="EnemyHealthBar" parent="." instance=ExtResource( 5 )]
margin_left = 7.36934
margin_top = -82.3469
margin_right = 47.3693
margin_bottom = -42.3469

[node name="ColorRect" parent="EnemyHealthBar" index="0"]
color = Color( 1, 0, 0, 0.572549 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, -16 )
shape = SubResource( 3 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Spawn" to="." method="_on_Spawn_timeout"]

[editable path="Hurtbox"]

[editable path="EnemyHealthBar"]
